# VigIA

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.back  Dockerfile.front  EDA_PATIC1.ipynb  LICENSE  PRD.md  README.md  compose.yaml  crime_prediction_grid.gpkg  fix_model_pipeline.py  nginx.conf  streamlit_crime_prediction_app.py
backend/: README.md  app.py  config.py  crime_model_simple.pkl  pyproject.toml  tests.py
backend/RoutePlanner/: HotspotQuerier.py  default_router.py  evaluate.py  test.py  tests.py
backend/RoutePlanner/prediction/: simple_wrapper.py  wrapper_interface.py
backend/database/: db_setup.sh  models.py  populate.py
backend/doc/: RouteSuggestions_get.yml  Route_get.yml  Route_put.yml  Routes_get.yml  global.yml  login.yml
experiment/: .gitignore  convert.py  index.html  main.js  package-lock.json  readme.md
frontend/: package.json
frontend/patrol_routes/: api_map_container.jsx  index.html  package-lock.json  package.json
frontend/patrol_routes/src/: App.css  App.jsx  Auth.jsx  index.css
frontend/patrol_routes/src/components/: GeoSelect.jsx  Header.jsx  LoginModal.jsx  MapContainer.jsx  Notification.jsx  NotificationProvider.jsx  Sidebar.jsx  SidebarSection.jsx  useRouteDirectionArrow.js
geodata/: atractivos_turisticos1.geojson  grid.geojson  hex_grid.gpkg  hex_grid_res8.gpkg  police.geojson  police.json  police1.geojson  sedes_educativas.geojson  tasa_de_desempleo.gpkg
ml/: evaluate.py  generate_h3_grid.py  predict.py  preprocess.py  quick_predict.py  quick_preprocessing.py  quick_train.py  train.py  use_simple_model_demo.py
ml/data/: generate_h3_grid.py  hurto_a_persona.csv
notebooks/: data-query.ipynb  routing-parameters.ipynb
