[project]
name = "backend"
version = "0.0.1"
description = ""
authors = [
    {name = "Fernando González Rivero",email = "fernando.gonzalezr@upb.edu.co"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "openrouteservice (>=2.3.3,<3.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "peewee (>=3.17.9,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
osmpythontools = "^0.3.5"
matplotlib = "^3.10.1"

